# report-strava-python

./: .env.example  .gitignore  .gitlab-ci.yml  .migration_backup_20251203_150125.json  .pre-commit-config.yaml  ANALISIS_MEJORAS_POSTGRES.md  CHANGELOG.md  CHANGELOG_FASE_1.md  CHANGELOG_FASE_2.md  CHANGELOG_FASE_3.md  CHANGELOG_FASE_4.md  COMPARACION_ESTRUCTURA.md  DASHBOARD_README.md  INICIO_RAPIDO.md  MEJORAS_MODULOS_DATABASE.md  MEJORAS_STRAVA_DB_SQLITE.md  Makefile  PROPUESTA_REESTRUCTURACION.md  README.md  RESUMEN_CAMBIOS.md  RESUMEN_EJECUTIVO_REESTRUCTURACION.md  ROADMAP_MIGRACION.md  SOLUCION_ERRORES.md  SSL_CERTIFICADOS.md  STRAVA_DB.session.sql  dashboard_app.py  migrate_structure.py  pyproject.toml  pytest.ini  requirements.txt  run_dashboard.bat  run_dashboard.sh  setup.py  test_setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/database/: INIT_DATABASE.md
docs/dev/: ANALISIS_ELIMINACION_MODULO_STRAVA.md  ARQUITECTURA.md  CI_CD.md  GUIA_MIGRACION_V3.md  GUIA_TESTING.md  MEJORAS_IMPLEMENTADAS.md  MEJORAS_STRAVA_TOKEN_Y_MAIN.md  ROADMAP_TESTING.md
docs/user/: DASHBOARD.md  GET_TOKEN.md  INICIO_RAPIDO.md  SOLUCION_ERRORES.md
examples/: README.md
examples/advanced/: ejemplo_uso_bd.py
py_strava/: __init__.py  config.py  db_schema.py  informe_strava.py  main.py
py_strava/api/: __init__.py  activities.py  auth.py
py_strava/cli/: __init__.py  main.py
py_strava/core/: __init__.py  reports.py  sync.py
py_strava/dashboard/: __init__.py  data_loader.py
py_strava/database/: __init__.py  postgres.py  schema.py  sqlite.py
py_strava/ejemplos/: README_EJEMPLOS.md  acces_token_strava.py  get_acces_token_strava.py  refresh_token_strava.py  strava_activities_1.py  strava_activities_2.py  strava_athlete_1.py  strava_kudos_bd_1.py  strava_kudos_one.py  strava_refresh_actvities_1.py
py_strava/legacy/: __init__.py
py_strava/strava/: __init__.py  strava_activities.py  (+6 more)
requirements/: README.md  base.txt  dev.txt  postgres.txt
scripts/: 01_get_token.py  README.md  check_dashboard_ready.py  diagnostico_tests.py  ejemplo_uso_bd.py  init_database.py  test_setup.py
test/: test_strava_token.py
tests/: conftest.py
(+19 files in other folders)
